Revision history for Perl module Test::WWW::Mechanize::PSGI:

{{$NEXT}}
    - Make UA aware of base URLs which are defined in the <head> of an HTML
      document (Olaf Alders)

0.37      2017-06-14 10:31:08-04:00 America/Toronto
    - Make the submit_form_ok example runnable (Tadeusz Sośnierz)

0.36 2016-05-28 08:24:37 America/Toronto
    - The previous release should have been 0.36, so bumping the version and
      re-releasing.

0.35 2016-05-19 17:23:53 America/Toronto
    - run request_send handlers before sending request (Olaf Alders)

0.34 Sun Jan  3 12:02:29 GMT 2010
    - update the README to reflect the name
    - fix handling of cookies, patch by tokuhirom

0.33 Tue Dec 15 07:12:18 GMT 2009
    - initial release
