@@ -3,6 +3,7 @@ Revision history for Perl module Test::WWW::Mechanize::PSGI:
 {{$NEXT}}
     - Make UA aware of base URLs which are defined in the <head> of an HTML
       document (Olaf Alders)
+    - Ensure that handlers run in the expected order (Olaf Alders)
 
 0.37      2017-06-14 10:31:08-04:00 America/Toronto
     - Make the submit_form_ok example runnable (Tadeusz Sośnierz)
